# openGL

./: CMakeLists.txt
res/helper/: GlHelper.cpp  GlHelper.h  Logger.h
res/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
